--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
-body
-{
+body {
+    background: #1E1F24;
     color: #333;
     text-align: center;
     font-family: Arial;
@@ -8,9 +8,8 @@ body
     padding: 0;
 }
 
-#cabecera
-{
-    background: #33A;
+#cabecera {
+    background: #37488B;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
@@ -18,15 +17,18 @@ body
     padding: 0.5em;
 }
 
-#cabecera #tagline
-{
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
+
+#cabecera #tagline {
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
 }
 
-#container
-{
+#container {
     width: 70%;
     padding: 0;
     text-align: left;
@@ -34,12 +36,11 @@ body
     margin: 0 auto;
 }
 
-#container h1
-{
+#container h1 {
     font-size: 20px;
 }
 
-#post
-{
+#post {
+    background: white;
     padding: 1em;
 }
